[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacker-news-sdk"
version = "0.1.0"
description = "Python SDK for the Stacker News GraphQL API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bitcoin", "lightning", "stacker-news", "nostr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
chrome = ["pycookiecheat>=0.6"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/spcpza/stacker-news-python"
"Bug Tracker" = "https://github.com/spcpza/stacker-news-python/issues"
"Stacker News" = "https://stacker.news/balthazar"

[tool.hatch.build.targets.wheel]
packages = ["sn_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
